--- a/index.html
+++ b/index.html
@@ -32,36 +32,39 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-coderush-plugins" class="anchor" href="#welcome-to-coderush-plugins"><span class="octicon octicon-link"></span></a>Welcome to CodeRush Plugins.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This site is here to provide a simple one stop shop for finding plugins.
+Initially I'll be adding the plugins whose source is stored here on github, but I'll also be happy enough to add references to plugins held elsewhere.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>So why another site? Don't we already have plugins listed elsewhere?
+Well yes, but there are a few advantages to hosting such a site here on guithub.com</p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
+<ul>
+<li>Markdown - Once I get the hang of it, I understand that it will be very easy to update pages without so much messing around in HTML. I guess we'll see.</li>
+<li>Git All The Things! - Push, pull, Reset, <em>cough</em> rebase <em>cough</em> Git all the things.</li>
+<li>Push for me, Pull (request) for you - If you think something is missing, let me know. I'm sure I'll be very happy to take Pull requests. :D</li>
+</ul><h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Yeah someone else has done all the hard work to make this look nice :) That's because you really don't want me messing around with html and css, when there are plugins to be made :D</p>
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>Think you can do better? - Fork me. Seriously, Go for it :)</li>
+<li>Got a plugin you'd like me to link to? Send me a pull request or contact me.</li>
+<li>Got an idea for a new plugin? Let me know. :)</li>
+</ul><h3>
+<a name="contact-me" class="anchor" href="#contact-me"><span class="octicon octicon-link"></span></a>Contact Me</h3>
+
+<p>The easiest way to reach me is on twitter. My twitter handle is the same as my github.com profile (<a href="https://github.com/RoryBecker" class="user-mention">@RoryBecker</a>) you can also email me @ <a href="mailto:roryb@devexpress.com">roryb@devexpress.com</a></p>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and they'll help you sort it out.</p>
       </section>
     </div>
 
